--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.3.0",
     "firebase": "^9.10.0",
     "font-awesome": "^4.7.0",
+    "joi": "^17.9.2",
     "lodash": "^4.17.10",
     "prop-types": "^15.6.2",
     "react": "^18.2.0",
@@ -19,6 +20,7 @@
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "sass": "^1.54.9",
     "web-vitals": "^2.1.4"
   },
